[gd_scene load_steps=14 format=3 uid="uid://dw0e4rxsjy0ct"]

[ext_resource type="Script" path="res://Scripts/title_screen.gd" id="1_djn8b"]
[ext_resource type="FontFile" uid="uid://cjsm3v7u373oj" path="res://Assets/Robotics Galactus.ttf" id="2_3vtdi"]
[ext_resource type="Script" path="res://Scripts/parallex_background.gd" id="2_4d1mj"]
[ext_resource type="Theme" uid="uid://d0ina7ck4rbrm" path="res://Themes/startbutton.tres" id="2_di2xe"]
[ext_resource type="Theme" uid="uid://dl2a0pfn0dvgf" path="res://Themes/controlsbutton.tres" id="3_idsfp"]
[ext_resource type="Script" path="res://Scenes/button.gd" id="3_jajbt"]
[ext_resource type="Texture2D" uid="uid://cxghgqetfhl6o" path="res://Assets/tbackground2.png" id="3_kr7r6"]
[ext_resource type="Theme" uid="uid://dgvatc5k6fv57" path="res://Themes/creditsbutton.tres" id="4_ajdgl"]
[ext_resource type="Texture2D" uid="uid://cllvlp4s4rdq2" path="res://Assets/far2.png" id="4_n87se"]
[ext_resource type="Theme" uid="uid://drym1xqwvw6my" path="res://Themes/powerbutton.tres" id="5_iawwt"]
[ext_resource type="Texture2D" uid="uid://ba6e867sf2din" path="res://Assets/middle2.png" id="5_vn1t0"]
[ext_resource type="Texture2D" uid="uid://beko0r1eab7kt" path="res://Assets/close2.png" id="6_jwggn"]

[sub_resource type="FontVariation" id="FontVariation_4dwcq"]
base_font = ExtResource("2_3vtdi")

[node name="Title Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_djn8b")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 470.0
offset_top = 265.0
offset_right = 670.0
offset_bottom = 505.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_di2xe")
script = ExtResource("3_jajbt")

[node name="Controls" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_idsfp")
script = ExtResource("3_jajbt")

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_ajdgl")
script = ExtResource("3_jajbt")

[node name="Quit3" type="Button" parent="."]
layout_mode = 2
offset_left = 10.0
offset_top = 589.0
offset_right = 60.0
offset_bottom = 639.0
size_flags_vertical = 3
theme = ExtResource("5_iawwt")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 337.0
offset_top = 145.0
offset_right = 806.0
offset_bottom = 228.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = SubResource("FontVariation_4dwcq")
theme_override_font_sizes/normal_font_size = 60
text = "necrobotic"

[node name="Parallex Background" type="Node2D" parent="."]
script = ExtResource("2_4d1mj")

[node name="ParallaxBackground" type="ParallaxBackground" parent="Parallex Background"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Parallex Background/ParallaxBackground"]
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="Parallex Background/ParallaxBackground/ParallaxLayer"]
position = Vector2(576, 324)
texture = ExtResource("3_kr7r6")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Parallex Background/ParallaxBackground"]
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="Parallex Background/ParallaxBackground/ParallaxLayer2"]
position = Vector2(576, 324)
texture = ExtResource("4_n87se")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="Parallex Background/ParallaxBackground"]
motion_scale = Vector2(0.3, 0.3)
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="Parallex Background/ParallaxBackground/ParallaxLayer3"]
position = Vector2(576, 324)
texture = ExtResource("5_vn1t0")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="Parallex Background/ParallaxBackground"]
motion_scale = Vector2(0.4, 0.4)
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="Parallex Background/ParallaxBackground/ParallaxLayer4"]
position = Vector2(576, 324)
texture = ExtResource("6_jwggn")

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Quit3" to="." method="_on_quit_pressed"]
